--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy NestJS to EC2 (PM2)
+name: Deploy to EC2
 
 on:
   push:
@@ -8,44 +8,33 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: production
-    
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build NestJS app
-        run: npm run build
-
-      - name: Copy files to EC2
-        uses: appleboy/scp-action@v0.1.7
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: |
-            dist
-            package.json
-            package-lock.json
-            ecosystem.config.js
-          target: /home/ubuntu/nestjs-app
-
-      - name: Deploy & Restart PM2
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
           script: |
-            cd /home/ubuntu/nestjs-app
-            npm ci --omit=dev
-            pm2 start ecosystem.config.js || pm2 restart nestjs-app
+            set -e
+
+            APP_DIR=/home/ubuntu/my-project
+            REPO_URL=git@github.com:MustafaRady20/elmahdy-erp-backend.git
+
+            if [ ! -d "$APP_DIR/.git" ]; then
+              echo "📦 First deploy - cloning repo"
+              git clone $REPO_URL $APP_DIR
+            else
+              echo "🔄 Pulling latest changes"
+              cd $APP_DIR
+              git pull origin main
+            fi
+
+            cd $APP_DIR
+            npm install
+            npm run build
+
+            pm2 restart my-nest-app || pm2 start dist/main.js --name my-nest-app
             pm2 save
