--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2
+name: Deploy NestJS to AWS ECR
 
 on:
   push:
@@ -10,31 +10,30 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v0.1.6
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          port: 22
-          script: |
-            set -e
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-            APP_DIR=/home/ubuntu/my-project
-            REPO_URL=git@github.com:MustafaRady20/elmahdy-erp-backend.git
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v2
 
-            if [ ! -d "$APP_DIR/.git" ]; then
-              echo "📦 First deploy - cloning repo"
-              git clone $REPO_URL $APP_DIR
-            else
-              echo "🔄 Pulling latest changes"
-              cd $APP_DIR
-              git pull origin main
-            fi
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ secrets.ECR_REPOSITORY }} .
 
-            cd $APP_DIR
-            npm install
-            npm run build
+      - name: Tag Docker image
+        run: |
+          docker tag \
+          ${{ secrets.ECR_REPOSITORY }}:latest \
+          ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:latest
 
-            pm2 restart my-nest-app || pm2 start dist/main.js --name my-nest-app
-            pm2 save
+      - name: Push Docker image to ECR
+        run: |
+          docker push \
+          ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:latest
